--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,9 +35,11 @@ html {
    margin: 0 auto;
    padding: 0 60px;
    display: grid;
-   grid-template-columns: 1fr 1fr 1fr;
+   grid-template-columns: 33% 33% 33%;
+   grid-template-rows: 15% 200px 200px 10%;
    grid-template-areas:
      "header header header"
+     "hero hero hero"
      "main main sidebar"
      "footer footer footer";
    grid-gap: 10px;
@@ -47,12 +49,13 @@ nav {
   list-style: none;
 }
 
-section {
+
+/* section {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 100px 80px;
-}
+} */
 
 /*header section*/
 header {
@@ -61,12 +64,15 @@ header {
   padding: 20px 0;
   grid-column-start: 1;
   grid-column-end: 4;
+  grid-template-columns: 1fr 1fr;
   background-color: #555;
 }
 
 header h2{
   font-family: Roboto, sans-serif;
+  font-weight: 600;
   justify-self: start;
+  margin: 0 15px;
 }
 
 header nav{
@@ -77,50 +83,78 @@ header nav li {
   list-style: none;
   display: inline-block;
   margin: 0 15px;
+  padding: 5px
 }
 
 /* hero section */
 .hero {
-  position: relative;
-  justify-content: center;
+  display: grid;
+  grid-area: "hero";
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row-gap: 1/4;
+  border-radius: 5px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/macbook1.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
   text-align: center;
-  min-height: 30vh;
+
 }
 
-.hero .background-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  z-index: -1;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('img/macbook1.jpg');
-  background-color: #fdca40;
+.hero .hero-content {
+  justify-self: center;
 }
+
+
 .hero h1 {
-  font: bold 60px "Open Sans", sans-serif;
-  margin-bottom: 10px;
+  font: bold 40px "Roboto", sans-serif;
 }
 
 .hero h3 {
-  font: normal 28px "Open Sans", sans-serif;
+  font: normal 20px "Roboto", sans-serif;
   margin-bottom: 20px;
+  padding: 10px 10px;
 }
 
 .hero a.btn{
-  padding: 20px 40px;
+  padding: 20px 20px;
+
 }
 
 
 /* main */
 .main {
   grid-area: "main" ;
-  background-color: yellow;
-  grid-column-start: 1;
-  grid-column-end: 3;
+  grid-column: 1 / 3;
+  grid-row: 3/4;
+  padding: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: grey;
+  border: 1px solid #ececec;
+  justify-content: space-between;
+}
+.main h3 {
+  font-weight: 500;
+  margin-bottom: .5rem;
+  flex: 1 0 auto;
 }
 
+.main p {
+  font-size: .75rem;
+  margin-bottom: .75rem;
+}
+
+.main button {
+  background-color: white;
+  border: 2px solid #50c6db;
+  color: #50c6db;
+  padding: .5rem;
+}
+
+.content-block-info {
+  flex: 0 1 calc(33% - .5rem);
+}
 
 
 /* sidebar */
