--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,6 +5,15 @@
   padding: 0;
 }
 
+html {
+  font: normal 16px sans-serif;
+  color: #fff;
+}
+
+nav {
+  list-style: none;
+}
+
 a {
   text-decoration: none;
   opacity: 0.75;
@@ -24,153 +33,114 @@ a.btn {
   opacity: 1;
 }
 
-html {
-  font: normal 16px sans-serif;
-  color: #fff;
-}
 
-.container {
-  max-width: 900px;
-   background-color: #fff;
-   margin: 0 auto;
-   padding: 0 60px;
-   display: grid;
-   grid-template-columns: 33% 33% 33%;
-   grid-template-rows: 15% 200px 200px 10%;
-   grid-template-areas:
-     "header header header"
-     "hero hero hero"
-     "main main sidebar"
-     "footer footer footer";
-   grid-gap: 10px;
-}
-
-nav {
-  list-style: none;
-}
-
-
-/* section {
+/* grid container style */
+/* .container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "header header header"
+    "main main sidebar"
+    "footer footer footer";
+} */
+section {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 100px 80px;
-} */
-
-/*header section*/
+}
+/* heading */
 header {
-  display: grid;
-  grid-area: "header";
-  padding: 20px 0;
-  grid-column-start: 1;
-  grid-column-end: 4;
-  grid-template-columns: 1fr 1fr;
-  background-color: #555;
+  position: absolute;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 35px 100px 0;
 }
 
 header h2{
   font-family: Roboto, sans-serif;
-  font-weight: 600;
-  justify-self: start;
-  margin: 0 15px;
 }
 
-header nav{
-  justify-self: end;
+header nav {
+  display: flex;
+  margin-right: -15px;
 }
 
 header nav li {
-  list-style: none;
-  display: inline-block;
   margin: 0 15px;
-  padding: 5px
 }
 
 /* hero section */
 .hero {
-  display: grid;
-  grid-area: "hero";
-  grid-column-start: 1;
-  grid-column-end: 4;
-  grid-row-gap: 1/4;
-  border-radius: 5px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/macbook1.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
+  position: relative;
+  justify-content: center;
   text-align: center;
-
+  min-height: 50vh;
 }
 
-.hero .hero-content {
-  justify-self: center;
+.hero .background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  z-index: -1;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('img/macbook1.jpg');
+  background-color: #fdca40;
 }
-
-
 .hero h1 {
-  font: bold 40px "Roboto", sans-serif;
+  font: bold 60px "Open Sans", sans-serif;
+  margin-bottom: 10px;
 }
 
 .hero h3 {
-  font: normal 20px "Roboto", sans-serif;
+  font: normal 28px "Open Sans", sans-serif;
   margin-bottom: 20px;
-  padding: 10px 10px;
 }
 
 .hero a.btn{
-  padding: 20px 20px;
-
+  padding: 20px 40px;
 }
 
+/* main content page */
+.featured {
+  background-color: #0288D1;
 
-/* main */
-.main {
-  grid-area: "main" ;
-  grid-column: 1 / 3;
-  grid-row: 3/4;
-  padding: 1rem;
-  display: flex;
-  flex-wrap: wrap;
-  background-color: grey;
-  border: 1px solid #ececec;
-  justify-content: space-between;
 }
-.main h3 {
-  font-weight: 500;
-  margin-bottom: .5rem;
-  flex: 1 0 auto;
-}
-
-.main p {
-  font-size: .75rem;
-  margin-bottom: .75rem;
+.blog-card {
+display: flex;
+flex-direction: column;
+margin: 1rem auto;
+box-shadow: 0 3px 7px -1px rgba(#000, .1);
+margin-bottom: 1.6%;
+line-height: 1.4;
+font-family: sans-serif;
+border-radius: 5px;
+overflow: hidden;
+z-index: 0;
 }
 
-.main button {
-  background-color: white;
-  border: 2px solid #50c6db;
-  color: #50c6db;
-  padding: .5rem;
+.photo {
+position: absolute;
+top: 0;
+right: 0;
+bottom: 0;
+left: 0;
+background-size: cover;
+background-position: center;
 }
-
-.content-block-info {
-  flex: 0 1 calc(33% - .5rem);
-}
-
-
-/* sidebar */
 
 .sidebar {
-  grid-area: "sidebar";
+  grid-area: sidebar;
   background-color: blue;
-  grid-column-start: 3;
-  grid-column-end: 4;
 }
 
-/* footer */
 
-footer {
+footer{
+  grid-area: footer;
   background-color: grey;
-  grid-area: "footer";
-  grid-column-start: 1;
-  grid-column-end: 4;
-}
+} */
