--- a/CSS/grid.css
+++ b/CSS/grid.css
@@ -148,7 +148,7 @@ footer .quote {
   margin-right: 10px;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (max-width: 600px) {
 
   .feature {
     grid-area: "main" ;
@@ -158,6 +158,7 @@ footer .quote {
     background-color: #fff;
     grid-gap: 10px;
     justify-self: center;
+
   }
 
   .blog-card {
@@ -173,10 +174,28 @@ footer .quote {
     padding: 10px;
     box-shadow: 5px 10px #ff5722;
   }
-  img {
+  .photo {
     width: 40%;
+  }
+
+  img {
+    width: 100%;
     height: 200px;
     border-radius: 4px;
+  }
+
+  /* footer */
+  footer {
+    background-color: #03a9f4;
+    color: #ffffff;
+    display: block;
+    font-size: 10px
+    font-weight: 300;
+    grid-area: "footer";
+    grid-column-start: 1;
+    grid-column-end: 6;
+    grid-template-rows: 1fr 1fr;
+    text-align: center;
   }
 
 }
