--- a/CSS/grid.css
+++ b/CSS/grid.css
@@ -1,201 +1,151 @@
-@import url('css/topo.css');
+.container-grid {
+  margin: 0 auto;
+  max-width: 1000px;
+  display: grid;
+  grid-template-rows: 100px 300px auto 100px;
+  grid-template-columns: 1fr 200px 200px 1fr;
+  grid-template-areas:
+  "header header header header"
+  "hero hero hero hero"
+  "main main main main"
+  "footer footer footer footer";
 
-.container {
- max-width: 900px;
- background-color: #ffffff;
- margin: 0 auto;
- padding: 0 60px;
- display: grid;
- grid-template-columns: 25% 25% 25% 25%;
- grid-template-rows: 50px auto 50px;
- grid-template-areas:
-   "header header header header"
-   "hero hero hero hero"
-   "main main main"
-   "footer footer footer footer";
 }
 
-/* header */
-header {
+.container-2 {
+  margin: 0 auto;
+  max-width: 1000px;
   display: grid;
+  grid-template-rows: 100px auto 100px;
+  grid-template-columns: 1fr 2fr 2fr 1fr;
+  grid-template-areas:
+  "header header header header"
+  "main main main main"
+  "footer footer footer footer";
+}
+/* header section */
+
+.header {
+  display: grid;
+  background-color: #0288D1;
   grid-area: "header";
-  padding: 20px 0;
-  grid-column-start: 1;
-  grid-column-end: 6;
-  grid-template-columns: 1fr 1fr;
-  background-color: #03a9f4;
-
+  grid-column: 1 / -1;
 }
 
-header nav{
-  justify-self: end;
-  padding: 0 10px;
-  margin: 0 10px;
-
+.header .nav {
+  display: inline;
+  grid-column: 4 / 5;
+  text-align: center;
+  align-self: center;
 }
 
-/* hero section */
+.header .logo {
+  grid-column: 1 / 2;
+  margin: 15px;
+  padding: 10px 10px;
+}
+
+/*hero content*/
 .hero {
-  display: grid;
-  background-color: #03a9f4;
-  grid-area: "hero";
-  padding: 20px 0;
-  grid-column-start: 1;
-  grid-column-end: 6;
-  height: 400px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/design.jpg');
   background-size:cover;
   background-position: center;
+  grid-area: "hero";
+  grid-column: 1 / -1;
 }
 
-.hero .hero-content {
-  justify-self: center;
+
+.hero-content {
+  grid-column: 2/4;
   text-align: center;
-  color: #ffffff;
+  align-self: center;
 }
 
-/* feature */
-.feature {
-  grid-area: "main" ;
-  grid-column: 1 / 6;
-  padding: 1rem;
+/* main section */
+.main {
+  grid-area: "main";
   display: flex;
-  background-color: #fff;
-  grid-gap: 10px;
+  background-color: #fefefe;
+  grid-column: 1 / -1;
+  grid-row: 3 / 4;
+  grid-column-gap: 10px;
+  padding: 20px;
+  justify-content: space-around;
+}
 
+.card {
+  display: grid;
+  background-color: #03a9f4;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  width: 32%;
+  height: 300px;
+  text-align: center;
+  align-content: center;
   justify-content: space-between;
+  border-radius: 10px;
+
+}
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(3,169,244,0.2);
 }
 
-.blog-card {
-  display: grid;
-  background-color: #03a9f4;
-  width: 31%;
-  grid-column-start: 1;
-  grid-column-end: 6;
-  justify-content: start;
-  grid-template-rows: max-content 200px 1fr;
-  border: 1px solid;
+.card-img img{
+  width: 95%;
+  object-fit: cover;
   border-radius: 5px;
-  padding: 10px;
-  box-shadow: 5px 10px #ff5722;
+
 }
 
-.photo {
-  display: flex;
-  grid-column-start: 1;
-  grid-column-end: 6;
-  grid-template-rows: max-content 200px 1fr;
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: auto;
-}
-
-img {
-  width: 100%;
-  height: 200px;
-  border-radius: 4px;
-}
-
-.desc {
-  background-color: #03a9f4;
-  color: #ffffff;
+/* blog section */
+.content {
   display: grid;
-  grid-column-start: 1;
-  grid-column-end: 6;
+  grid-area: "main";
+  grid-column: 1 /-1;
+  width: 95%;
+  border: 5px solid #757575;
+  background-color: #f3f3f3;
+  justify-self: center;
+}
+
+.blog {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.blog-content {
+  padding: 20px 20px;
+}
+
+/* About section */
+.about {
+  display: grid;
+  grid-area: "main";
+  grid-column: 1 /-1;
+  width: 95%;
+  background-color: #f3f3f3;
+  justify-self: center;
+}
+
+.about-img {
   width: 100%;
-  text-align: center;
+  height: auto;
+  object-fit: contain;
+}
+
+.item {
+  width: 100%;
+  height: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 
 /* footer */
-footer {
-  background-color: #03a9f4;
-  color: #ffffff;
-  display: grid;
-  font-size: 10px
-  font-weight: 300;
+.footer {
   grid-area: "footer";
-  grid-column-start: 1;
-  grid-column-end: 6;
-  grid-template-rows: 1fr 1fr;
+  background-color: #0288D1;
+  grid-column: 1 / -1;
+  grid-row: 4 / 5;
   text-align: center;
-}
-
-footer .social{
-  justify-self: start;
-  margin: 0 10px;
-  padding: 0 10px;
-  display: grid;
-  grid-column-start: 1;
-  grid-column-end: 2;
-}
-
-footer .copy {
-  justify-self: center;
-  padding: 0 10px;
-  display: grid;
-  grid-column-start: 2;
-  grid-column-end: 4;
-}
-
-footer .quote {
-  justify-self: end;
-  padding: 0 10px;
-  display: grid;
-  grid-column-start: 4;
-  grid-column-end: 6;
-  padding: 0 20px;
-  margin-right: 10px;
-}
-
-@media screen and (max-width: 600px) {
-
-  .feature {
-    grid-area: "main" ;
-    grid-column: 1 / 6;
-    padding: 1rem;
-    display: grid;
-    background-color: #fff;
-    grid-gap: 10px;
-    justify-self: center;
-
-  }
-
-  .blog-card {
-    display: flex;
-    background-color: #03a9f4;
-    width: 95%;
-    grid-column-start: 2;
-    grid-column-end: 5;
-    justify-content: center;
-    grid-template-rows: max-content 200px 1fr;
-    border: 1px solid;
-    border-radius: 5px;
-    padding: 10px;
-    box-shadow: 5px 10px #ff5722;
-  }
-  .photo {
-    width: 40%;
-  }
-
-  img {
-    width: 100%;
-    height: 200px;
-    border-radius: 4px;
-  }
-
-  /* footer */
-  footer {
-    background-color: #03a9f4;
-    color: #ffffff;
-    display: block;
-    font-size: 10px
-    font-weight: 300;
-    grid-area: "footer";
-    grid-column-start: 1;
-    grid-column-end: 6;
-    grid-template-rows: 1fr 1fr;
-    text-align: center;
-  }
-
 }
