--- a/CSS/grid.css
+++ b/CSS/grid.css
@@ -2,7 +2,7 @@
   margin: 0 auto;
   max-width: 1000px;
   display: grid;
-  grid-template-rows: 100px 300px auto 100px;
+  grid-template-rows: 100px 200px auto 100px;
   grid-template-columns: 1fr 200px 200px 1fr;
   grid-template-areas:
   "header header header header"
@@ -16,11 +16,12 @@
   margin: 0 auto;
   max-width: 1000px;
   display: grid;
-  grid-template-rows: 100px auto 100px;
-  grid-template-columns: 1fr 2fr 2fr 1fr;
+  grid-template-rows: 100px auto auto 100px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-areas:
   "header header header header"
-  "main main main main"
+  "about-img about-img main main"
+  "about about about about"
   "footer footer footer footer";
 }
 /* header section */
@@ -119,18 +120,53 @@
 
 /* About section */
 .about {
-  display: grid;
+  display: flex;
   grid-area: "main";
   grid-column: 1 /-1;
-  width: 95%;
+  width: 100%;
   background-color: #f3f3f3;
-  justify-self: center;
+
 }
 
 .about-img {
+  grid-area: "about-img";
+  width: 50%;
+  height: 15rem;
+  object-fit: contain;
+
+}
+
+.author-content {
+  grid-area: "main";
+  width: 50%;
+  height:15rem;
+
+}
+
+img {
+  width: 100%;
+  height: 14rem;
+  border-radius: 10px;
+}
+
+.extra {
+  display: grid;
   width: 100%;
   height: auto;
-  object-fit: contain;
+}
+
+.edu {
+  display: block;
+  text-align: center;
+  padding: 10px 10px;
+}
+
+.prj {
+  text-align: center;
+  padding: 10px 10px;
+  background-color: #f3f3f3;
+  height: auto;
+
 }
 
 .item {
@@ -138,6 +174,41 @@
   height: auto;
   margin-top: 20px;
   margin-bottom: 20px;
+}
+
+.gallery {
+  display: grid;
+  grid-template-rows: repeat(2 100px);
+  grid-template-columns: 50px 50px 50px;
+  justify-content: center;
+  align-items: stretch;
+  grid-gap: 10px;
+  padding: 10px;
+  background-color: #757575;
+}
+
+.gal1 {
+background-color: #03a9f4;
+}
+
+.gal2 {
+background-color: #0288D1;
+}
+
+.gal3 {
+background-color: #03a9f4;
+}
+
+.gal4 {
+background-color: #0288D1;
+}
+
+.gal5 {
+  background-color: #03a9f4;
+}
+
+.gal6 {
+  background-color: #0288D1;
 }
 
 
