--- a/CSS/grid.css
+++ b/CSS/grid.css
@@ -192,7 +192,7 @@ background-color: #03a9f4;
 }
 
 .gal2 {
-background-color: #0288D1;
+background-color: #ff5722;
 }
 
 .gal3 {
@@ -200,7 +200,7 @@ background-color: #03a9f4;
 }
 
 .gal4 {
-background-color: #0288D1;
+background-color: #ff5722;
 }
 
 .gal5 {
@@ -208,7 +208,7 @@ background-color: #0288D1;
 }
 
 .gal6 {
-  background-color: #0288D1;
+  background-color: #ff5722;
 }
 
 
